k8s/15-ms-product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-product
  namespace: default
  labels:
    app: ms-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-product
  template:
    metadata:
      labels:
        app: ms-product
    spec:
      containers:
      - name: ms-product
        image: host.minikube.internal:5000/ms-product:latest
        ports:
        - containerPort: 8084
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-product
  namespace: default
  labels:
    app: ms-product
spec:
  type: ClusterIP
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
  selector:
    app: ms-product
