k8s/ms-manufacturer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-manufacturer
  namespace: default
  labels:
    app: ms-manufacturer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-manufacturer
  template:
    metadata:
      labels:
        app: ms-manufacturer
    spec:
      containers:
      - name: ms-manufacturer
        image: localhost:5000/ms-manufacturer:latest
        ports:
        - containerPort: 8083
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-manufacturer
  namespace: default
  labels:
    app: ms-manufacturer
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: ms-manufacturer
